--- a/Others/天天明朗.md
+++ b/Others/天天明朗.md
@@ -4,3 +4,12 @@ sort: 5
 
 # 天天明朗
 
+以后我养一只狗狗的话，我就给他取名叫明天。他应该会是一只走路连蹦带跳的狗狗，碰到烦恼的事就撒腿跑开。他最好能比我更擅长表达爱。不过不擅长也不要紧，我知道他会很认真的爱我。
+
+明天是一个多美好的词汇啊，充满无限的希望和可能。可明天其实永远就是明天，就和这个世界上无数的承诺一样，永远也不会到来。
+
+但狗狗他会比我更有勇气奔向明天的。
+
+2023.10.06
+
+啡舍
